Make a proper pytest plugin out of pytest_helpers, prepare for mocked tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-addopts = -v --cov=grunnur --cov-report=html --cov-report=term
+addopts = -p no:grunnur -v --cov=grunnur --cov-report=html --cov-report=term
+markers =
+    selftest: marks a test used for testing custom fixtures
