Add more plugin tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -p no:grunnur -v --cov=grunnur --cov-report=html --cov-report=term
+addopts = -p no:grunnur -v --cov=grunnur --cov-report=html --cov-report=term -m "not plugin_inner_test"
 markers =
-    selftest: marks a test used for testing custom fixtures
+    plugin_inner_test: marks tests used for testing custom fixtures (called in a sandbox only)
