--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,12 @@
 recursive-include examples *.py
 recursive-include test *.py
+recursive-include stubs *.pyi
 
 include grunnur/*.mako
+include test/*.mako
 include LICENSE.md
 include MANIFEST.in
-include README.rst
+include README.md
+include mypy.ini
 include pytest.ini
+include .coveragerc
