--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -12,3 +12,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: psf/black@stable
+
+  mypy:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10"]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    # Cannot use PDM because `mypy` does not handle the PEP582 `__pypackages__` directory well.
+    # See https://github.com/python/mypy/issues/10633
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -e .[lint]
+    - name: Run mypy
+      run: |
+        mypy examples grunnur
