Fix source packaging
MANIFEST.in was ignored by PDM

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
         pdm sync -G tests
     - name: Test with pytest
       run: |
-        pdm run py.test --cov=grunnur --cov-report=xml test
+        pdm run py.test --cov=grunnur --cov-report=xml tests
     - name: Upload coverage
       if: matrix.python-version == '3.11'
       run: |
