--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,4 +27,4 @@ jobs:
         pdm sync -G docs
     - name: Run sphinx-build
       run: |
-        pdm run sphinx-build -n doc build/sphinx
+        pdm run sphinx-build -n docs build/sphinx
