Add a setuptools-scm entry to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ source-includes = [
     "pytest.ini",
 ]
 
+[tool.setuptools_scm]
+
 [build-system]
 requires = ["pdm-pep517"]
 build-backend = "pdm.pep517.api"
