--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,4 +16,8 @@ formats: all
 python:
   version: 3.8
   install:
-    - requirements: doc/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+
