--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,2 @@
 [pytest]
-addopts = -p no:grunnur -v --cov=grunnur --cov-report=html --cov-report=term -m "not plugin_inner_test"
-markers =
-    plugin_inner_test: marks tests used for testing custom fixtures (called in a sandbox only)
+addopts = -p no:pytest_grunnur -v --cov=grunnur --cov-report=html --cov-report=term
