--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "grunnur"
-dynamic = ["version"]
+version = "0.3.1.dev"
 description = "Uniform API for PyOpenCL and PyCUDA."
 authors = [
     {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
@@ -42,9 +42,6 @@ lint = [
 line-length = 100
 target-version = ['py38']
 
-[tool.pdm]
-version = { source = "scm" }
-
 [tool.pdm.build]
 source-includes = [
     "**/*.pyi",
@@ -55,15 +52,12 @@ source-includes = [
     "docs/*.bat",
     "docs/Makefile",
     ".coveragerc",
-    ".mypy.ini",
+    "mypy.ini",
     "pytest.ini",
 ]
 
 [tool.setuptools_scm]
 
 [build-system]
-requires = [
-    "pdm-pep517",
-    "setuptools_scm[toml]>=7",
-]
+requires = ["pdm-pep517"]
 build-backend = "pdm.pep517.api"
