--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -7,17 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  black:
+  ruff:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10"]
     steps:
-    - uses: actions/checkout@v2
-    - uses: psf/black@stable
+      - uses: actions/checkout@v3
+      - uses: chartboost/ruff-action@v1
 
   mypy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v2
