--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
       run: |
         pdm run py.test --cov=grunnur --cov-report=xml tests
     - name: Upload coverage
-      if: matrix.python-version == '3.11'
+      if: matrix.python-version == '3.10'
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
         chmod +x codecov
